# stwo-web-stark

./: .dockerignore  .gitignore  404.html  Dockerfile  README.md  fibonacci_1000.json  index.html  index.txt  package-lock.json  package.json  skaffold.yaml  worker_prove.ts  worker_trace_gen.ts  worker_verify.ts
.github/workflows/: page.yml
_next/static/chunks/: 122-184ec8f76a5bbe52.js  419.5d3aad715afb2a9e.js  479.e9af50547a13b631.js  771.343ac72d44ce2d22.js  main-app-862f93094d4bef4f.js  webpack-2c517a8a4faff27a.js
_next/static/chunks/app/: layout-fb068338bef50f83.js  page-91877788ef0ecc39.js
_next/static/css/: 223d8af925e1d670.css
app/: layout.tsx  page.tsx
backend/: Cargo.toml  README.md  rustfmt.toml
backend/src/: error.rs  executable.rs  hints.rs  lib.rs  runner.rs  utils.rs
backend/src/hint_processor/: circuit.rs  dict_manager.rs  hint_processor.rs  hint_processor_utils.rs  mod.rs
backend/tests/: web.rs
k8s/: certificates.yaml  issuer.yaml  stwo-web-stark-deployment.yaml
