[package]
name = "stwo-web-stark"
version = "0.1.0"
authors = ["Bartosz Nowak <bartekn337@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
lol_alloc = "0.4.1"
bytemuck = { version = "1.20.0", features = ["derive"] }
cairo-air = { git = "https://github.com/starkware-libs/stwo-cairo.git", rev = "5df580eb6dcbc67a247270f9e49618271ce888ec", default-features = false}
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm", rev = "b1a91f929b5fa29a1a2e9e6990a68a1220c0c673", features = ["mod_builtin"], default-features = false}
hex = "0.4.3"
itertools = "0.12.0"
serde = "1.0.134"
serde_json = "1.0.134"
serde-wasm-bindgen = "0.6.5"
stwo_cairo_prover = { git = "https://github.com/starkware-libs/stwo-cairo.git", rev = "5df580eb6dcbc67a247270f9e49618271ce888ec", default-features = false}
stwo-cairo-adapter = { git = "https://github.com/starkware-libs/stwo-cairo.git", rev = "5df580eb6dcbc67a247270f9e49618271ce888ec", default-features = false}
stwo-prover = { git = "https://github.com/starkware-libs/stwo", rev = "ca3e98f", features = ["parallel"], default-features = false}
thiserror-no-std = "2.0.2"
wasm-bindgen = "0.2.100"
zip = { version = "2.2.2", features = ["deflate"], default-features = false}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O1']