[package]
name = "stwo-web-stark"
version = "0.1.0"
authors = ["Bartosz Nowak <bartekn337@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm", rev = "83bfdcf", features = ["mod_builtin"], default-features = false}

hex = "0.4.3"
serde = "1.0.134"
serde_json = "1.0.134"
serde-wasm-bindgen = "0.6.5"
stwo_cairo_prover = { git = "https://github.com/starkware-libs/stwo-cairo.git", rev = "07d3a9f" }
stwo_cairo_utils = { git = "https://github.com/starkware-libs/stwo-cairo.git", rev = "07d3a9f" }
stwo-prover = { git = "https://github.com/starkware-libs/stwo", rev = "af5475cb", features = ["parallel"], default-features = false}
thiserror-no-std = "2.0.2"
wasm-bindgen = "0.2.84"
zip = { version = "2.2.2", features = ["deflate"], default-features = false}
num-bigint = { version = "0.4" }
anyhow = "1"
hashbrown = "0.15.2"
itertools = "0.10.3"
num-traits = "0.2.19"
cairo-lang-sierra = { version = "2.10.0-rc.0", default-features = false }
cairo-lang-sierra-to-casm = { version = "2.10.0-rc.0", default-features = false }
cairo-lang-defs = { version = "2.10.0-rc.0", default-features = false }
cairo-lang-casm = { version = "2.10.0-rc.0", default-features = false }
cairo-lang-sierra-type-size = { version = "2.10.0-rc.0", default-features = false }
indexmap = "2.8.0"
thiserror = {version="2.0.12", features=["std"]}
clap = "4.5.35"
ark-ff = {version = "0.5.0"}
ark-std = "0.5.0"
cairo-lang-utils = "2.11.2"
starknet-types-core = { version = "0.1.7", features = [
    "hash",
    "prime-bigint",
    "serde",
] }
num-integer = "0.1.46"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }



[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O1']